--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   },
   "dependencies": {
     "@microsoft/sp-core-library": "1.10.0",
-    "@microsoft/sp-property-pane": "1.10.0",
-    "@microsoft/sp-webpart-base": "1.10.0",
     "@microsoft/sp-lodash-subset": "1.10.0",
     "@microsoft/sp-office-ui-fabric-core": "1.10.0",
+    "@microsoft/sp-property-pane": "1.10.0",
+    "@microsoft/sp-webpart-base": "1.10.0",
+    "@types/datatables.net": "^1.10.18",
+    "@types/es6-promise": "0.0.33",
+    "@types/jquery": "^2.0.54",
+    "@types/jqueryui": "^1.12.10",
     "@types/webpack-env": "1.13.1",
-    "@types/es6-promise": "0.0.33"
+    "datatables.net": "^1.10.20",
+    "datatables.net-jqui": "^1.10.20",
+    "sp-pnp-js": "^3.0.10"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "1.10.0",
